--- a/docs/estilosCSS/style.css
+++ b/docs/estilosCSS/style.css
@@ -51,11 +51,48 @@ img:hover{
 #nav:checked ~ .icon-bar i:nth-child(2){
 	display: none;
 }
+/*          Logog BAIRES ATR         */
+#LogoATR{
+	margin: 0 auto;
+	font-size: 25px;
+	color: #00FFFF;
+}
+/*        estilo del menu desplegable */
 
-.containerMenu{
+#menu_Upper_Container {
 	display: none;
+	position: absolute;
+	width: 188px;
+	height: 387px;
+	left: 0px;
+	top: 60px;
+	list-style: none;
+
+	background: rgba(0, 182, 182, 0.9);
+}
+#menu_Upper_Container a{
+	text-decoration: none;
+}
+#menu_Upper_Container li{
+	height: 66px;
+	border: 1px solid rgba(0, 0, 0, 0.8);
+	text-align: center;
+	box-sizing: border-box;
+	padding-top: 18px;
+	color: #fff;
+	font-family: 'Inder';
+	font-size: 25px;
 }
 
+#nav:checked ~ .containerMenu #menu_Upper_Container{
+	display: flex;
+	flex-direction: column;
+
+}
+
+#conteinerSearch, #iconChangeLan{
+	display: none;
+}
 
 
 /*------------------------------ Contenido principal -------------------------------------*/
